--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -34,3 +34,22 @@ h1,h2,h3,h4,h5,h6 {
     background-color: darksalmon;
 }
 
+.container {
+    margin: auto;
+    display: flex;
+    flex: 1;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-size: 125px;
+    width: 80%;
+}
+
+.plant {
+    border: 5px solid black;
+    background: rgb(128, 167, 69);
+    color: white;
+    margin: 3px;
+    padding: 10px 30px;
+    width: 15%;
+    text-align: center;
+}
